remove royes and components midori link
